# Lioness

./: .clang-format  .gitmodules  CMakeLists.txt
.githooks/: pre-commit
examples/flatten/: test.cpp
sources/: CMakeLists.txt  ClangJsonEmitter.cpp  Common.hpp  CommonMiddleEnd.hpp  RegisterPasses.cpp
sources/Flatten/: CMakeLists.txt  ClangAttribute.cpp  Flatten.cpp  Flatten.hpp
tests/flatten/simple/: test.cpp
